sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:7: error: ')' expected but 'else' found.
			else { return}
                        ^AlgBubbleSort3:28: error: expected class or object definition
Pour tout i dans [lgr-2,0] (parcours du plus grand au plus petit)
^AlgBubbleSort3:29: error: expected class or object definition
       Pour tout j dans [0, i]
       ^AlgBubbleSort3:30: error: expected class or object definition
          Si les cases j et j+1 doivent être inverser, le faire
          ^AlgBubbleSort3:31: error: expected class or object definition
       Si le parcours sur les j n'a rien inversé, casser la boucle 
       ^AlgBubbleSort3:34: error: Unmatched closing brace '}' ignored here
}
^